@@ -20,6 +20,7 @@
     <div class="body">
     <p class="version">Version: @VERSION@
     , license: @LICENSE@</p>
+    <h2>Summary</h2><p>@SUMMARY@</p>
 @BODY@
     <hr />
 
